--- a/2_code/2_experiment/22_setup_cmf_models.ipynb
+++ b/2_code/2_experiment/22_setup_cmf_models.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This script adapts the river depth and width files"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -29,6 +22,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from hydromt import DataCatalog\n",
+    "data_libs = [\n",
+    "    r'../../1_data/2_forcing/forcing_data.yml',    \n",
+    "]\n",
+    "data_cat = DataCatalog(deltares_data=True, data_libs=data_libs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read SFINCS maps\n",
     "mdir = r'../../3_models/CMF/03min'\n",
     "\n",
     "# from params.txt:\n",
@@ -41,8 +48,8 @@
     "nodata=-9999\n",
     "da_lst = []\n",
     "nlayers = {'nextxy': 2, 'lonlat': 2}\n",
-    "dtypes = {'nextxy': 'i4'}\n",
-    "for name in ['nextxy', 'lonlat', 'uparea']: #, 'rivhgt', 'rivwth_grwl' 'rivdph1_hc27_hp30', 'rivwth_est']:\n",
+    "dtypes = {'nextxy': 'i4', 'basin': 'i4'}\n",
+    "for name in ['nextxy', 'lonlat', 'uparea', 'rivhgt', 'rivwth_gwdlr', 'basin']: # 'rivdph1_hc27_hp30', 'rivwth_est']:\n",
     "    shape0 = (nlayers[name], shape[0], shape[1]) if name in nlayers else shape\n",
     "    dtype = dtypes.get(name, 'f4')\n",
     "    da = hydromt.raster.RasterDataArray.from_numpy(\n",
@@ -57,6 +64,10 @@
     "ds['idx'] = xr.DataArray(data=np.arange(ds.raster.size, dtype=int).reshape(ds.raster.shape), dims=ds.raster.dims)\n",
     "cmf_mask = ds['uparea'] != ds['uparea'].raster.nodata\n",
     "ds['uparea'] = (ds['uparea']/1e6).where(cmf_mask, ds['uparea'].raster.nodata) # km2\n",
+    "ds['pit'] = (ds['nextxy']==-9).all('dim0')\n",
+    "cols, rows = np.meshgrid(range(shape[1]), range(shape[0]))\n",
+    "ds['col']= xr.Variable(data=cols+1, dims=da.raster.dims)\n",
+    "ds['row']= xr.Variable(data=rows+1, dims=da.raster.dims)\n",
     "\n",
     "# initiate flow dir object\n",
     "flw = hydromt.flw.flwdir_from_da(ds['nextxy'], ftype='nextxy')"
@@ -84,7 +95,66 @@
     "    geometry=gpd.points_from_xy(xs.ravel(),ys.ravel(), crs=4326),\n",
     "    data = {name: ds[name].values.ravel() for name in ds.data_vars if ds[name].ndim == 2}\n",
     ")\n",
-    "gdf_out = gdf_out[~gdf_out.geometry.is_empty].set_index('idx')  # drop invalid  points"
+    "gdf_out = gdf_out[~gdf_out.geometry.is_empty].set_index('idx')  # drop invalid  points\n",
+    "gdf_out['upa10'] = np.log10(gdf_out['uparea'])\n",
+    "gdf_pits = gdf_out[gdf_out['pit']]\n",
+    "gdf_pits.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prepare downstream boundary mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygeos\n",
+    "\n",
+    "def cmf_pit_mapping(gdf_gtsm, name, gdf_pits, mapdir=mdir, max_dist=10e3):\n",
+    "    pts = pygeos.points([g.coords[:][0] for g in gdf_pits.geometry])\n",
+    "    gtsm_idx = gdf_gtsm.sindex.nearest(pts)[1]\n",
+    "    gdf_pits['gtsm_idx'] = gtsm_idx + 1\n",
+    "    gdf_pits['gtsm_dst']  = gdf_gtsm.iloc[gtsm_idx].to_crs(32736).distance(gdf_pits.to_crs(32736), align=False).values\n",
+    "    gdf_pits = gdf_pits[gdf_pits['gtsm_dst']<max_dist]\n",
+    "    nlinks = gdf_pits.index.size\n",
+    "    print(nlinks)\n",
+    "    cmf_gtsm_ref = gdf_pits[['col', 'row', 'gtsm_idx']].fillna(0).values.astype(np.int32)\n",
+    "    with open(join(mapdir, f'{name}.txt'), 'w') as f:\n",
+    "        f.write(f'{nlinks:d}\\n')\n",
+    "        np.savetxt(\n",
+    "            f, \n",
+    "            cmf_gtsm_ref,\n",
+    "            fmt='%3.d',\n",
+    "        )\n",
+    "    return gdf_pits, cmf_gtsm_ref"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_gtsm = data_cat.get_geodataset('gtsm_idai_twl').vector.to_gdf()\n",
+    "gdf_pits1, cmf_gtsm_ref = cmf_pit_mapping(gdf_gtsm, name='GTSM_EVENT', gdf_pits=gdf_pits, max_dist=20e3)\n",
+    "\n",
+    "fig, ax = plt.subplots(1,1, figsize=(6,6))\n",
+    "gdf_pits.plot(markersize=(gdf_pits['upa10'].values)*6, color='g', ax=ax)\n",
+    "gdf_pits1.plot(markersize=(gdf_pits1['upa10'].values)*7, color='k', ax=ax)\n",
+    "gdf_gtsm.iloc[np.unique(gdf_pits1['gtsm_idx'].values-1)].plot(markersize=15, color='r', marker='^', ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prepare river width and depth maps"
    ]
   },
   {
@@ -94,8 +164,7 @@
    "outputs": [],
    "source": [
     "# get lin 2019 river width and bankfull Q data\n",
-    "from hydromt import DataCatalog\n",
-    "data_cat = DataCatalog(deltares_data=True)\n",
+    "\n",
     "bbox1 = np.nanmin(xs), np.nanmin(ys), np.nanmax(xs), np.nanmax(ys)\n",
     "print(bbox1)\n",
     "\n",
@@ -128,11 +197,12 @@
    "source": [
     "# derive river width \n",
     "min_rivwth = 5\n",
+    "min_rivdph = 1\n",
     "\n",
     "ds['qbankfull'] = np.maximum(ds['qbankfull'], 0).where(cmf_mask, nodata)\n",
     "ds['rivwth'] = np.maximum(ds['rivwth'], min_rivwth).where(cmf_mask, nodata)\n",
-    "ds['qbankfull'].values.astype(np.float32).tofile(join(mdir, f'qbankfull.bin'))\n",
-    "ds['rivwth'].values.astype(np.float32).tofile(join(mdir, f'rivwth_lin.bin'))"
+    "# ds['qbankfull'].values.astype(np.float32).tofile(join(mdir, f'qbankfull.bin'))\n",
+    "# ds['rivwth'].values.astype(np.float32).tofile(join(mdir, f'rivwth_lin.bin'))"
    ]
   },
   {
@@ -142,10 +212,12 @@
    "outputs": [],
    "source": [
     "# derive river depth\n",
-    "min_rivdph = 1\n",
-    "hc, hp = 0.27, 0.25\n",
-    "ds['rivdph'] = np.maximum(hc * ds['qbankfull']**hp, min_rivdph).where(cmf_mask, nodata)\n",
-    "ds['rivdph'].values.astype(np.float32).tofile(join(mdir, f'rivdph_hc{hc}_hp{hp}.bin'))"
+    "hc, hp = 0.27, 0.30\n",
+    "for hc in [0.135, 0.27, 0.405]:\n",
+    "    ds['rivdph'] = np.maximum(hc * ds['qbankfull']**hp, min_rivdph).where(cmf_mask, nodata)\n",
+    "    ds['rivdph'].values.astype(np.float32).tofile(join(mdir, f'rivdph_hc{hc}_hp{hp}.bin'))\n",
+    "    ds['rivdph'].raster.set_nodata(nodata)\n",
+    "    # ds['rivdph'].raster.to_raster(join(mdir, 'rivbath', f'rivdph_hc{hc}_hp{hp}.tif'))"
    ]
   },
   {
@@ -159,148 +231,8 @@
     "    xs=xs, ys=ys, **{name: ds[name].values for name in ds.data_vars if (ds[name].ndim == 2 and name != 'idx')}\n",
     ")\n",
     "gdf_riv0 = gpd.GeoDataFrame.from_features(feats, crs=4326).set_index('idx')\n",
-    "\n",
-    "gdf_riv0.explore('rivwth', vmin=min_rivwth, vmax=500)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (ds['rivdph'] - ds['rivdph1_hc27_hp30']).where(cmf_mask).plot(vmin=-1, vmax=1, cmap='coolwarm')\n",
-    "(ds['rivwth'] - ds['rivwth_est']).where(cmf_mask).plot(vmin=-50, vmax=50, cmap='coolwarm')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_base = data_cat.get_rasterdataset('merit_hydro', bbox=bbox1, buffer=5)  #buffer [cells]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flw_d8 = hydromt.flw.flwdir_from_da(ds_base['flwdir'], mask=False)\n",
-    "_ = flw_d8.main_upstream(ds_base['uparea'].values)\n",
-    "\n",
-    "gdf_out['idxs_out'] = flw_d8.index(*ds_flat['lonlat'].isel(index=gdf_out.index))\n",
-    "mask = np.zeros(flw_d8.shape, dtype=bool).ravel()\n",
-    "for idxs in flw_d8.path(idxs = gdf_out['idxs_out'])[0]:\n",
-    "    mask[idxs] = True\n",
-    "mask = mask.reshape(flw_d8.shape)\n",
-    "\n",
-    "feats = flw_d8.streams(\n",
-    "    mask=mask,\n",
-    "    elevtn=ds_base['elevtn'].values,\n",
-    "    uparea=ds_base['uparea'].values,\n",
-    "    direction='down',\n",
-    "    max_len=5e3\n",
-    ")\n",
-    "gdf_stream = gpd.GeoDataFrame.from_features(feats, crs=ds_base.raster.crs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "from hydromt.workflows.rivers import river_width, river_depth\n",
-    "\n",
-    "da_rivmask = data_cat.get_rasterdataset('grwl_mask', bbox=bbox1)#.raster.reproject_like(ds_base, method='max')\n",
-    "da_rivmask = np.logical_and(da_rivmask!=255,da_rivmask!=0)\n",
-    "\n",
-    "gdf_rivdata = data_cat.get_geodataframe('rivers_lin2019_v1', bbox=bbox1, buffer=1000) # buffer [m]\n",
-    "\n",
-    "gdf_stream['rivwth'] = river_width(gdf_stream, da_rivmask=da_rivmask)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hydromt_sfincs.workflows import get_river_bathymetry\n",
-    "gdf_riv = get_river_bathymetry(\n",
-    "    ds_base,\n",
-    "    flwdir=flw_d8,\n",
-    "    gdf_riv=gdf_rivdata,\n",
-    "    river_upa = 25,\n",
-    "    river_len = 1e3,\n",
-    "    segment_length=5e3,\n",
-    "    rivdph_method='powlaw',\n",
-    "    hp=0.3,\n",
-    "    hc=0.27,\n",
-    "    rivwth_method='geom'\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_stream.explore('rivwth', vmin=5, vmax=300, cmap='Blues')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_stream.to_file('cmf_streams.gpkg', driver='GPKG')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "mdir1 = r'../../3_models/SFINCS'\n",
-    "runs = [path for path in glob.glob(join(mdir1, '*')) if isdir(path)]\n",
-    "runs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from hydromt.gis_utils import nearest_merge\n",
-    "cols = ['rivdph', 'rivwth', 'uparea']\n",
-    "\n",
-    "for root in runs[2:]:\n",
-    "    fn0 = join(root, 'gis', 'rivers.geojson')\n",
-    "    gdf_riv = gpd.read_file(fn0)\n",
-    "    gdf_out1 = nearest_merge(gdf_out.to_crs(gdf_riv.crs), gdf_riv[['geometry']+cols], max_dist=1e3)\n",
-    "    valid = np.abs(1-gdf_out1['uparea0']/gdf_out1['uparea'])<0.1\n",
-    "    for col in cols:\n",
-    "        vals = gdf_out1.loc[gdf_riv0.idx, col].values\n",
-    "        vals[~valid.loc[gdf_riv0.idx]] = np.nan\n",
-    "        gdf_riv0[col] = np.where(~np.isnan(vals), vals, gdf_riv0[col])\n",
-    "    # gdf_riv0['distance_right'] = gdf_out1.loc[gdf_riv0.idx, 'distance_right'].values\n",
-    "    # gdf_riv0.explore('distance_right', vmax=1e2)#('rivdph')\n",
-    "    for dvar in ['rivdph', 'rivwth']:\n",
-    "        data = ds[dvar].values.copy()\n",
-    "        data.flat[gdf_riv0.idx.values] = gdf_riv0[dvar].values\n",
-    "        data.tofile(join(mdir, f'{dvar}_{basename(root)[3:]}.bin'))\n",
-    "    break"
+    "gdf_riv0.to_file(join(mdir, 'gis', 'nextxy_outlets.geojson'), driver='GeoJSON')#.explore('rivwth', vmin=min_rivwth, vmax=500)\n",
+    "gdf_riv0\n"
    ]
   }
  ],
