--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -113,12 +113,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_cmf_riv = gpd.read_file(join(cmf_root, 'nextxy.geojson'))\n",
+    "gdf_cmf_riv = gpd.read_file(join(cmf_root, 'nextxy_outlets.geojson'))\n",
+    "gdf_cmf_riv['uparea10'] = np.log10(np.maximum(gdf_cmf_riv['uparea'].values, 1))\n",
     "gdf_cmf_riv.head()\n",
-    "c, r = gdf_cmf_riv['col'].values-1, gdf_cmf_riv['row'].values-1\n",
-    "gdf_cmf_riv['basin'] = ds_cmf['basin'].values[r, c]\n",
     "gdf_cmf_riv = gdf_cmf_riv[np.isin(gdf_cmf_riv['basin'], basins)]\n",
-    "gdf_cmf_riv = gdf_cmf_riv.to_crs(ds_sfx.raster.crs)"
+    "gdf_cmf_riv = gdf_cmf_riv.to_crs(ds_sfx.raster.crs)\n",
+    "gdf_cmf_riv"
    ]
   },
   {
@@ -196,6 +196,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74efce3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_cmf_riv['uparea10']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f7a184bd",
    "metadata": {},
    "outputs": [],
@@ -239,7 +249,7 @@
     "gdf_cmf_bas.iloc[[0]].plot(ax=ax, zorder=1, **kwargs)\n",
     "pungwe_handle = mpatches.Patch(**kwargs)\n",
     "# river\n",
-    "lws = (gdf_cmf_riv['upa_10']-7)/1.5\n",
+    "lws = (gdf_cmf_riv['uparea10'])/1.5\n",
     "gdf_cmf_riv.plot(ax=ax, zorder=1, label='CaMa-Flood rivers', lw=lws)\n",
     "# gauges\n",
     "gdf0.plot(ax=ax, marker='o', markersize=75, c=\"w\", edgecolor=\"k\", label='river gauge\\n approx. locations', zorder=4)\n",
@@ -318,14 +328,6 @@
     "fig.subplots_adjust(wspace=0.04)\n",
     "plt.savefig(join('../../4_results', f'nested_spatial.png'), dpi=225, bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9b0ea9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
