--- a/2_code/4_analyze_plot/43_validate_floodmaps.ipynb
+++ b/2_code/4_analyze_plot/43_validate_floodmaps.ipynb
@@ -11,6 +11,13 @@
     "import numpy as np\n",
     "from os.path import join, basename\n",
     "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "from matplotlib import colors, patheffects\n",
+    "import cartopy.crs as ccrs\n",
+    "from string import ascii_lowercase as abcd\n",
+    "\n",
     "# local script skill.py\n",
     "from skill import skill"
    ]
@@ -95,22 +102,7 @@
    "outputs": [],
    "source": [
     "# plot\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib import colors, patheffects\n",
-    "import cartopy.crs as ccrs\n",
-    "from string import ascii_lowercase as abcd\n",
-    "\n",
-    "cm_dict = {\n",
-    "    1: ('false neg.', '#dd8452'),\n",
-    "    2: ('false pos.', '#c44e52'),\n",
-    "    3: ('true pos.', '#4c72b0'),\n",
-    "}\n",
-    "levels = [k for k,v in cm_dict.items()] + [4]\n",
-    "colors = [v[1] for k,v in cm_dict.items()]\n",
-    "ticklabs = [v[0] for k,v in cm_dict.items()]\n",
-    "cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)\n",
-    "ticks = np.array(levels[:-1])+np.diff(levels)/2."
+    "\n"
    ]
   },
   {
@@ -136,16 +128,19 @@
     "hmin=0.25\n",
     "scores = {'cmf': {}, 'sfx': {}}\n",
     "res = {'cmf': {}, 'sfx': {}}\n",
+    "hmax_sim = {'cmf': {}, 'sfx': {}}\n",
     "for event, date in events.items():\n",
     "    postfix = '_100m'\n",
     "    da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif')).load()\n",
-    "    da_cmf = xr.open_dataarray(join(mdir1, f'flddph_{event}.nc')).sel(run='00_default_03min')\n",
+    "    da_cmf = xr.open_dataarray(join(mdir1, f'flddph_{event}.nc')).sel(run='01_powlaw_03min')\n",
     "    scores['cmf'][date],  res['cmf'][date] = skill(da_cmf, da_obs, msk[postfix], hmin=hmin)\n",
+    "    hmax_sim['cmf'][date] = da_cmf.where(~msk[postfix])\n",
     "    # postfix, run = '_50m', '11_rivpowlaw'\n",
     "    postfix, run = '_100m', '01_rivpowlaw'\n",
     "    da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif')).load()\n",
     "    da_sfx = xr.open_dataarray(join(mdir, f'flddph_{event}{postfix}.nc')).sel(run=run).raster.flipud().load()\n",
-    "    scores['sfx'][date],  res['sfx'][date] = skill(da_sfx, da_obs, msk[postfix], hmin=hmin)"
+    "    scores['sfx'][date],  res['sfx'][date] = skill(da_sfx, da_obs, msk[postfix], hmin=hmin)\n",
+    "    hmax_sim['sfx'][date] = da_sfx.where(~msk[postfix])\n"
    ]
   },
   {
@@ -162,7 +157,20 @@
     "utm_zone = da_obs.raster.crs.to_wkt().split(\"UTM zone \")[1][:3]\n",
     "utm = ccrs.UTM(int(utm_zone[:2]), \"S\" in utm_zone)\n",
     "extent = np.array(da_obs.raster.box.buffer(100).total_bounds)[[0, 2, 1, 3]]\n",
-    "props = dict( facecolor='w', alpha=0.8)\n",
+    "props = dict( facecolor='w', lw=0, alpha=0.8)\n",
+    "\n",
+    "\n",
+    "cm_dict = {\n",
+    "    1: ('false neg.', '#dd8452'),\n",
+    "    2: ('false pos.', '#c44e52'),\n",
+    "    3: ('true pos.', '#4c72b0'),\n",
+    "}\n",
+    "levels = [k for k,v in cm_dict.items()] + [4]\n",
+    "colors = [v[1] for k,v in cm_dict.items()]\n",
+    "ticklabs = [v[0] for k,v in cm_dict.items()]\n",
+    "cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)\n",
+    "ticks = np.array(levels[:-1])+np.diff(levels)/2.\n",
+    "\n",
     "\n",
     "ann_kwargs = dict(\n",
     "    xytext=(3, 3),\n",
@@ -206,7 +214,7 @@
     "            x, y = grow.geometry.x, grow.geometry.y\n",
     "            ax.plot(x,y, '.k', markersize=4)\n",
     "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes)\n",
+    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
     "            \n",
     "        ax.yaxis.set_visible(True)\n",
     "        ax.xaxis.set_visible(True)\n",
@@ -251,20 +259,20 @@
     "    sharex = True, sharey=True\n",
     ")\n",
     "axs = axs.flatten()\n",
-    "\n",
+    "hmin=0.1\n",
     "for col, (event, date) in enumerate(events.items()):\n",
     "    for row, mod in enumerate(['cmf', 'sfx']):\n",
     "        i = int(row*2 + col)\n",
     "        ax = axs[i]\n",
-    "        da_cm = res[mod][date].load()\n",
+    "        da_sim = hmax_sim[mod][date].load()\n",
     "        da_skill = scores[mod][date].load()\n",
     "        hr, csi, fr = da_skill['H'].item(), da_skill['C'].item(), da_skill['F'].item()\n",
     "\n",
-    "        da_cm.raster.set_crs(gdf_riv.crs)\n",
+    "        da_sim.raster.set_crs(gdf_riv.crs)\n",
     "        da_msk.raster.set_crs(gdf_riv.crs)\n",
     "\n",
     "        da_msk.where(da_msk).plot(ax=ax, cmap='gray', add_colorbar=False, alpha=0.5)\n",
-    "        cs = da_cm.where(da_cm>0).plot(ax=ax, cmap=cmap, norm=norm, add_colorbar=False)\n",
+    "        cs = da_sim.where(da_sim>hmin).plot(ax=ax, cmap='viridis', vmin=hmin, vmax=4, add_colorbar=False)\n",
     "        # context\n",
     "        # gdf_riv.boundary.plot(ax=ax, ls='--', lw=0.5, color='k', alpha=0.5)\n",
     "        # gdf_towns.plot(ax=ax, marker='.', markersize=20, color=\"k\", label='towns / cities', zorder=4)\n",
@@ -272,11 +280,10 @@
     "            x, y = grow.geometry.x, grow.geometry.y\n",
     "            ax.plot(x,y, '.k', markersize=4)\n",
     "            ax.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes)\n",
+    "        ax.text(0.01, 0.95, abcd[i].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes, bbox=props)\n",
     "            \n",
     "        ax.yaxis.set_visible(True)\n",
     "        ax.xaxis.set_visible(True)\n",
-    "        ax.text(0.8, 0.88, f'C: {csi:.2f}\\nH: {hr:.2f}\\nF: {fr:.2f}', transform=ax.transAxes, bbox=props)\n",
     "\n",
     "        if col == 0:\n",
     "            ax.set_ylabel(f\"y coordinate UTM zone {utm_zone} [m]\")\n",
@@ -297,10 +304,11 @@
     "cbar_ax = fig.add_axes([0.93, 0.33, 0.015, 0.3])\n",
     "\n",
     "# # Draw the colorbar\n",
+    "ticks = [hmin] + np.arange(0.5, 4.1, 0.5).tolist()\n",
     "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
-    "cbar_ax.set_yticklabels(ticklabs)\n",
+    "cbar_ax.set_ylabel('maximum flood depth [m]')\n",
     "\n",
-    "# plt.savefig(join(fdir, f'validation_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
+    "plt.savefig(join(fdir, f'hmax_hmin25_100m.png'), dpi=500, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -315,35 +323,46 @@
     "## TODO different rows per event (to scale x axis)\n",
     "import pandas as pd\n",
     "cmf_rm = {\n",
-    "    '01_powlaw_06min': '5. spatial res: 6 arcmin',\n",
-    "    # '09_rivpowlaw_lnd0.05': '3. land: manning=0.05 m.s$^{-1/3}$',\n",
-    "    # '06_rivpowlaw_hc0.5': '2c. river: a=0.50, b=0.30',\n",
-    "    '03_powlaw_hp35_03min': '2b. river: a=0.27, b=0.35',\n",
-    "    '02_powlaw_hp25_03min': '2a. river: a=0.27, b=0.25',\n",
+    "    '01_powlaw_06min': '6. spatial res: 200%',\n",
+    "    '05_powlaw_bf0_03min': '5b. bifurcations: 0% (off)',\n",
+    "    '04_powlaw_bf5_03min': '5a. bifurcations: 50%',\n",
+    "    '07_powlaw_fldman15_03min': '3b. land manning: 150%',\n",
+    "    '06_powlaw_fldman05_03min': '3a. land manning: 50%',\n",
+    "    '02_powlaw_hp405_03min': '2b. river depth: 150%',\n",
+    "    '03_powlaw_hp135_03min': '2a. river depth: 50%',\n",
     "    '01_powlaw_03min': '1. default',\n",
     "}\n",
     "sfx_rm = {\n",
-    "    '01_rivpowlaw_qh': '4b. forcing: no precip.',\n",
+    "    '01_rivpowlaw_qh': '4b. forcing: no P',\n",
     "    '01_rivpowlaw_glofas': '4a. forcing: GLOFAS Q',\n",
-    "    '09_rivpowlaw_lnd0.05': '3. land: manning=0.05 m.s$^{-1/3}$',\n",
-    "    # '03_rivgvf': '2d. river: grad. varying flow',\n",
-    "    '06_rivpowlaw_hc0.5': '2c. river: a=0.50, b=0.30',\n",
-    "    '05_rivpowlaw_hp0.35': '2b. river: a=0.27, b=0.35',\n",
-    "    '04_rivpowlaw_hp0.25': '2a. river: a=0.27, b=0.25',\n",
+    "    '09_rivpowlaw_lnd0.15': '3b. land manning: 150%',\n",
+    "    '09_rivpowlaw_lnd0.05': '3a. land manning: 50%',\n",
+    "    '06_rivpowlaw_hc0.405': '2b. river depth: 150%',\n",
+    "    '06_rivpowlaw_hc0.135': '2a. river depth: 50%',\n",
     "    '01_rivpowlaw': '1. default',\n",
     "}\n",
     "\n",
     "sfx_skill, cmf_skill = {}, {}\n",
+    "hmin=0.25\n",
     "for event in events:\n",
     "    df = pd.read_csv(join(mdir, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
-    "    sfx_skill[event] = df.loc[sfx_rm.keys()].rename(sfx_rm)\n",
+    "    sfx_skill[event] = df.loc[sfx_rm.keys()].rename(sfx_rm).drop(columns='E')\n",
     "    df= pd.read_csv(join(mdir1, f'flddph_{event}_skill_hmin{hmin}.csv'), index_col=0)\n",
-    "    cmf_skill[event] = df.loc[cmf_rm.keys()].rename(cmf_rm)\n",
-    "\n",
-    "\n",
+    "    cmf_skill[event] = df.loc[cmf_rm.keys()].rename(cmf_rm).drop(columns='E')\n",
+    "    df1 = pd.concat([cmf_skill[event],sfx_skill[event]],axis=1,keys=['CMF', 'SFINCS']).swaplevel(0,1,axis=1).sort_index(axis=0).sort_index(axis=1).round(3)\n",
+    "    df1.to_csv(join(fdir, f'sensitivity_{event}.csv'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, axs = plt.subplots(2,3, figsize=(15,10), sharey=True)\n",
-    "colors=['darkblue', 'cornflowerblue', 'darkgreen', 'tab:green']\n",
-    "kwargs = dict(color=colors, edgecolor='white', linewidth=1.5, width=0.8, legend=False, zorder=4)\n",
+    "# colors=['darkgreen', 'darkblue', 'darkgreen', 'tab:green']\n",
+    "kwargs = dict(edgecolor='white', linewidth=1.5, width=0.8, legend=False, zorder=4)\n",
     "xlims = [\n",
     "    [[0.60, 0.76], [0.65, 0.91], [0.00,0.21]],\n",
     "    [[0.25, 0.51], [0.35, 0.85], [0.25,0.51]],\n",
@@ -395,6 +414,13 @@
     "fig.subplots_adjust(wspace=0.05) \n",
     "plt.savefig(join(fdir, f'sensitivity.png'), dpi=300, bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
