--- a/2_code/1_prepare/hydromt_data_export.ipynb
+++ b/2_code/1_prepare/hydromt_data_export.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c3db69d4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "91c2d487",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "28bcf2b7",
    "metadata": {},
    "outputs": [],
@@ -75,6 +75,26 @@
     "    unit_conversion=False,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0102327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "from os.path import join\n",
+    "import glob\n",
+    "root = \"../../1_data\"\n",
+    "fns = glob.glob(join(root, '2_forcing','ERA5', 'era5_ro_*.nc'))\n",
+    "for fn in fns:\n",
+    "    print(fn)\n",
+    "    da_ro = xr.open_dataset(fn)\n",
+    "    encoding = {v: {'zlib': True} for v in da_ro.data_vars}\n",
+    "    (da_ro*0.8).to_netcdf(fn.replace('era5_ro_', 'era5_ro80_'), encoding=encoding)\n",
+    "    (da_ro*1.2).to_netcdf(fn.replace('era5_ro_', 'era5_ro120_'), encoding=encoding)"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
