--- a/2_code/2_experiment/21_setup_sfincs_models.ipynb
+++ b/2_code/2_experiment/21_setup_sfincs_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-02-26 15:20:04,216 - update - log - DEBUG - Writing log messages to new file ../../3_models/SFINCS\\00_base_100m_v2\\hydromt.log.\n",
+      "2022-02-26 15:20:04,217 - update - log - INFO - HydroMT version: 0.4.5.dev\n"
+     ]
+    }
+   ],
    "source": [
     "# model and data paths\n",
     "model_root = r'../../3_models/SFINCS'\n",
-    "base_root = join(model_root, \"10_base_50m\")\n",
     "data_libs = [\n",
     "    r'../../1_data/1_static/static_data.yml',\n",
     "    r'../../1_data/2_forcing/forcing_data.yml',    \n",
     "]\n",
-    "logger = setuplog('update', join(base_root, \"hydromt.log\"), log_level=10)\n",
     "\n",
     "# NOTE: please contact the autors for an executable\n",
     "fn_exe = \"p:/11205283-hydromt-floodmodelling/02_models/bin/subgrid_openacc_11_rev295_16092021/sfincs.exe\"\n"
@@ -42,9 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_root = join(model_root, \"00_base_100m\")\n",
+    "logger = setuplog('update', join(base_root, \"hydromt.log\"), log_level=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# build model base layers\n",
     "region = {'bbox': [34.33,-20.12,34.95,-19.30]}\n",
-    "res = 50 # resolution [m]\n",
+    "res = 100 # resolution [m]\n",
     "opt = configread('build_sfincs.ini', abs_path=True)\n",
     "kwargs = opt.pop('global',{})\n",
     "mod = SfincsModel(root=base_root, data_libs=data_libs, logger=logger, **kwargs)\n",
@@ -62,14 +79,15 @@
     "base_root = join(model_root, \"00_base_100m\")\n",
     "runs = [\n",
     "    (1, {'rivdph_method': 'powlaw'}, {}),\n",
-    "    (2, {'rivdph_method': 'manning'}, {}),\n",
-    "    (3, {'rivdph_method': 'gvf'}, {}),\n",
-    "    (4, {'rivdph_method': 'powlaw', 'hp': 0.25}, {}),\n",
-    "    (5, {'rivdph_method': 'powlaw', 'hp': 0.35}, {}),\n",
-    "    (6, {'rivdph_method': 'powlaw', 'hc': 0.50}, {}),\n",
-    "    (7, {'rivdph_method': 'gvf', 'rivbank': False}, {}),\n",
-    "    (8, {'rivdph_method': 'powlaw', 'river_upa': 25}, {}),\n",
-    "    (9, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.05}),\n",
+    "    (2, {'rivdph_method': 'powlaw', 'hc': 0.405}, {}),  # 2x river depth\n",
+    "    (2, {'rivdph_method': 'powlaw', 'hc': 0.135}, {}),   # 0.5x river depth\n",
+    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.05}),\n",
+    "    (3, {'rivdph_method': 'powlaw'}, {'lnd_man': 0.15}),\n",
+    "    # (2, {'rivdph_method': 'manning'}, {}),\n",
+    "    # (3, {'rivdph_method': 'gvf'}, {}),\n",
+    "    # (6, {'rivdph_method': 'powlaw', 'rivbank': False}, {}),  # relative to local cells (nstead of bank)\n",
+    "    # (7, {'rivdph_method': 'gvf', 'rivbank': False}, {}),\n",
+    "    # (8, {'rivdph_method': 'powlaw', 'river_upa': 25}, {}),\n",
     "]\n",
     "# base_root = join(model_root, \"10_base_50m\")\n",
     "# runs = [\n",
@@ -114,18 +132,12 @@
     "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if not isfile(r)]\n",
     "for root0 in runs:\n",
     "    # update forcing in subfolders\n",
-    "    for event in ['idai', 'eloise', 'idai_glofas', 'eloise_glofas']:\n",
+    "    for event in ['idai', 'eloise']:\n",
     "        root = join(root0, event)\n",
     "        if isdir(root):\n",
     "            continue\n",
     "        mod1 = SfincsModel(root0, mode='r', data_libs=data_libs, logger=logger)\n",
     "        opt = configread(f'update_sfincs_{event}.ini', abs_path=True)\n",
-    "        # glofas forcing only with default 01_ run\n",
-    "        if 'glofas' in basename(event):\n",
-    "            if not basename(root0).startswith('01'): continue\n",
-    "            opt['setup_q_forcing_from_grid'].update({\n",
-    "                'discharge_fn': 'glofas_era5', 'uparea_fn': 'glofas_uparea'\n",
-    "            })\n",
     "        mod1.update(model_out=root, opt=opt, write=False)\n",
     "        # write forcing and sfincs.inp only\n",
     "        mod1.write_forcing()\n",
@@ -141,7 +153,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import product\n",
+    "# write forcing\n",
+    "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if not isfile(r)]\n",
+    "base_root = join(model_root, \"01_rivpowlaw\")\n",
+    "\n",
+    "# update forcing in subfolders\n",
+    "for event in ['idai', 'eloise']:\n",
+    "    for run in ['glofas', 'h_x80', 'h_x120', 'qp_x80', 'qp_x120']:\n",
+    "        root = join(base_root, f'{event}_{run}')\n",
+    "        if isdir(root):\n",
+    "            continue\n",
+    "        mod1 = SfincsModel(base_root, mode='r', data_libs=data_libs, logger=logger)\n",
+    "        opt = configread(f'update_sfincs_{event}.ini', abs_path=True)\n",
+    "        # glofas forcing only with default 01_ run\n",
+    "        if 'glofas' in run:\n",
+    "            opt['setup_q_forcing_from_grid'].update({\n",
+    "                'discharge_fn': 'glofas_era5', 'uparea_fn': 'glofas_uparea'\n",
+    "            })\n",
+    "        elif 'qp_' in run:\n",
+    "            mult = run.split('_')[1]\n",
+    "            dis_fn = opt['setup_q_forcing_from_grid']['discharge_fn']\n",
+    "            opt['setup_q_forcing_from_grid'].update({'discharge_fn': f'{dis_fn}_{mult}'})\n",
+    "            prec_fn = opt['setup_p_forcing_from_grid']['precip_fn']\n",
+    "            opt['setup_p_forcing_from_grid'].update({'precip_fn': f'{prec_fn}_{mult}'})\n",
+    "        elif 'h_' in run:\n",
+    "            mult = run.split('_')[1]\n",
+    "            h_fn = opt['setup_h_forcing']['geodataset_fn']\n",
+    "            opt['setup_h_forcing'].update({'geodataset_fn': f'{h_fn}_{mult}'})\n",
+    "        mod1.update(model_out=root, opt=opt, write=False)\n",
+    "        # write forcing and sfincs.inp only\n",
+    "        mod1.write_forcing()\n",
+    "        mod1.write_config(rel_path=f'../')\n",
+    "        mod1.plot_forcing()\n",
+    "        plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from hydromt_sfincs.utils import write_timeseries, write_inp\n",
     "import os\n",
     "## prepare compound runs\n",
@@ -234,9 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n",
+      "1/38: ../../3_models/SFINCS\\01_rivpowlaw\\eloise\n"
+     ]
+    }
+   ],
    "source": [
     "# run models\n",
     "from os.path import dirname\n",
@@ -257,6 +318,13 @@
     "        p = subprocess.Popen([fn_exe], stdout=f, cwd=root)\n",
     "        %time p.wait()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
